<resources>
    <string name="app_name">TaskApp36</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="task">Task</string>
    <string name="web_client_id">408583908632-1u2mm1buscinb8tte2bsej3204jcm3ee.apps.googleusercontent.com</string>
    <string name="choice_photo">Выберите фотографию нажав на желтый квадрат</string>
</resources>