<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="kg.geektech.taskapp36.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="kg.geektech.taskapp36.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="kg.geektech.taskapp36.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/profile_fragment"
        android:name="kg.geektech.taskapp36.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/task_fragment"
        android:name="kg.geektech.taskapp36.TaskFragment"
        android:label="@string/task"
        tools:layout="@layout/fragment_task" />
    <fragment
        android:id="@+id/boardFragment"
        android:name="kg.geektech.taskapp36.ui.on_board.BoardFragment"
        android:label="fragment_board"
        tools:layout="@layout/fragment_board" />

</navigation>